@@ -431,3 +431,6 @@
 2019-09-12 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a regression in glassplayergui(1) that caused meters
 	to be rendered incorrectly.
+2019-09-12 Fred Gleason <fredg@paravelsystems.com>
+	* Re-indented switch() statements in
+	'src/glassplayergui/segmeter.cpp'.
